--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -4,7 +4,7 @@
 
 I would like to thank the two supervisors of this thesis, Katharina Hartmann and Pavel Caha, for their support, advice and inspiration.
 
-My thanks also go to all principle researchers of the Research Training Group `Nominal Modification':
+My thanks also go to all principle researchers of the Research Training Group `Nominal Modification' for their advice and comments on my work:
 Angela Grimm,
 Beata Moskal,
 Caroline Fery,
@@ -25,7 +25,7 @@ Peter Smith,
 Petra Schulz and
 Sven Grawunder.
 
-I also thank my colleagues from the Research Training Group:
+I also thank my colleagues from the Research Training Group for sharing their ideas and experiences:
 Abigail Anne Bimpeh,
 Ahmad Al-Bitar,
 Astrid Gößwein,
@@ -41,64 +41,46 @@ Sanja Srdanović,
 Sebastian Bredemann,
 Yat Han Lai and
 Yranahan Traoré.
-
-sharing experiences and ideas
-
-The same thanks go to
-Zheng Shen,
+Thanks also to
+Derya Nuhbalaoglu,
 Heidi Klockmann and
-Derya Nuhbalaoglu
+Zheng Shen,
+for their time and advice.
+Not only did I enjoy your company as colleagues, I am also grateful that I can call some of you now good friends.
+Because of you I had a wonderful time in Frankfurt in and other places on the planet.
 
-sharing experience, always being there
-
-I do not only want to thank you for being good colleagues, but some of you also became friends.
-experience enrich
-great time in frankfurt
-sharing
-different people
-got to know
-climbing
-
-nano-community
-Karen
-Guido
-Michal
-Pavel
-Bartosz
-Lucie
-Maria
-building on such a nice framework to work in (see karen)
-supportive
-nice community
-time in New York
-great environment
-
-opportunity to come
-David Embick
-University of Pennsylvania
-nice time
-
-Masyryk University in Brno
-twice
-
+During my three years as a PhD-student I was lucky enough to get the opportunity to visit the University of Pennsylvania in Philadelphia and the Masaryk University in Brno (twice). Thank you for giving me the chance to come and for the inspiration and ideas I got during my stays.
+I presented my work at
 ConSOLE XXVI in London,
 The 42nd Penn Linguistics Conference in Philadeplhia,
 GLOW 41 in Budapest,
-28 Colloquium on Generative Grammar in Tarragona,
-On the place of case in grammar (PlaCiG) workshop in Rethymnon,
-Exploring Nanosyntax workshop at the LSA annual meeting in New York
+the 28th Colloquium on Generative Grammar in Tarragona,
+On the place of case in grammar (PlaCiG) in Rethymnon and
+the Exploring Nanosyntax workshop at the LSA annual meeting in New York.
+I am grateful to the participants of these conferences and workshops for their helpful comments and questions.
+I am also grateful for the opportunity to present my work at colloquia at Universität Leipzig and at the Georg-August-Universität Göttingen and for the feedback I received there.
 
-Leipzig and Göttingen, opportunity to present my work in the colloquia
+I also want to thank the Nanosyntax community for creating such a nice environment to do linguistics in.
+The nanolabs and lecture series always keep me inspired and motivated.
+I especially thank
+Bartosz Wiland,
+Guido Vanden Wyngaerd,
+Karen de Clercq,
+Lucie Janku,
+Maria Cortiula,
+Michal Starke and
+Pavel Caha.
 
+To Peter Smith and Beata Moskal,
+thank you for the warm welcome when I first arrived in Frankfurt and for the continuous support until the day I handed in this dissertation.
+Pete, also thank you for your advice (linguistic and non-linguistic) and calming words in your role as my supervisor.
 
-Special thanks to Peter Smith and Beata Moskal.
-Thank you for your warm welcome when I first arrived in Frankfurt and for the continuous support until the day I handed in this dissertation.
-Pete also thanks for your advice and calming words in your role as my supervisor.
+Jan Don, thanks for your encouragement to apply for the position in Frankfurt and for mentioning my name, which continues to open new doors for me.
 
-Jan Don, thanks for your encouragement to apply for the position in Frankfurt, for the continuous collaborations besides my thesis and for mentioning my name, which continues to open new doors for me.
+To my family and friends in The Netherlands, bedankt dat jullie me niet zijn vergeten en dat jullie me zijn komen opzoeken in Frankfurt en Offenbach om me aan te moedigen en af te leiden.
 
-To my family and friends in The Netherlands, thank you for not forgetting me, for your visits to Frankfurt and Offenbach and for encouraging and distracting me.
+Heit en mem, dankewol dat jim my oanmoedige hawwe om myn eigen paad te gean en dankewol foar jim support ûnderweis.
 
-Heit en mem, dankewol dat jim my oanmoedige hawwe om myn eigen paad te gean en foar jim support ûnderweis.
-
-Jan, danke dass du für mich gesorgt hast in meinem Intensivschreibfasen, dass du zugehört hast als ich wieder meine wirren Gedanken mit dir teilen wollte, und dass wir zusammen nach Holland gezogen sind.
+Jan, danke dass du für mich gesorgt hast in meinen Intensivschreibphasen,
+dass du mir zugehört hast als ich wieder meine wirren Gedanken mit dir geteilt habe,
+und dass wir zusammen nach Holland gezogen sind.
