--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -30,7 +30,7 @@ Taking this all together, there are four possible patterns. First, the internal 
 The first possible pattern is that of a language that allows the internal case and the external case to surface when either of them wins the case competition. I call this the unrestricted type of language \citep[just as cf.][]{grosu1987,cinqueforthcoming}: the internal and external case do not need to match. The pattern might look familiar, because it is the one that Gothic has, which I discussed in Chapter \ref{ch:recurring}.
 Table \ref{tbl:case-competition-int-ext} (repeated from Table \ref{tbl:summary-gothic-simple}) illustrates what the pattern for such a language looks like.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Pattern of the unrestricted type of language}
   \begin{tabular}{c|c|c|c}
@@ -68,7 +68,7 @@ The second possible pattern is that of a language that allows the internal case 
 
 Table \ref{tbl:case-competition-only-int} illustrates what the pattern for such a language looks like.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Pattern of the internal-only type of language}
   \begin{tabular}{c|c|c|c}
@@ -108,7 +108,7 @@ The third possible pattern is that of a language that allows the external case t
 
 Table \ref{tbl:case-competition-only-ext} illustrates what the pattern for such a language looks like.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Pattern of the external-only type of language}
   \begin{tabular}{c|c|c|c}
@@ -147,7 +147,7 @@ The fourth possible pattern is that of a language that allows neither the intern
 
 Table \ref{tbl:case-competition-none} illustrates what the pattern for such a language looks like.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Pattern of the matching type of language}
   \begin{tabular}{c|c|c|c}
@@ -189,7 +189,7 @@ In this chapter I show that three of the four patterns I introduced are attested
 
 This section discusses the situation in which the internal case and the external case are allowed to surface when either of them wins the case competition. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-int-ext-repeated}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Pattern of the unrestricted type of language (repeated)}
   \begin{tabular}{c|c|c|c}
@@ -223,7 +223,7 @@ Two examples of languages that show this pattern are Gothic and Old High German.
 
 In Chapter \ref{ch:recurring}, I discussed case competition in Gothic headless relatives, based on the work of \citet{harbert1978}. I repeat the results from Section \ref{sec:pattern-rels} in Table \ref{tbl:summary-gothic-repeated}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Summary of Gothic headless relatives (repeated)}
     \input{tables/gothic-summary}
@@ -275,7 +275,7 @@ The relative pronoun \tit{them} `\ac{rp}.\ac{pl}.\ac{m}.\ac{dat}' appears in the
 
 These findings can be summarized as in Table \ref{tbl:summary-ohg-matching}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Old High German headless relatives (matching)}
   \begin{tabular}{c|c|c|c}
@@ -333,7 +333,7 @@ At the end of this section I discuss a counterexample to the case scale, in whic
 
 The two examples in which the nominative and the accusative compete are highlighted in Table \ref{tbl:summary-old-high-german-nom-acc}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Old High German headless relatives (\ac{nom} --- \ac{acc})}
   \begin{tabular}{c|c|c|c}
@@ -389,7 +389,7 @@ and 3\ac{sg}.\ac{m}.\ac{nom} reply.\ac{pst}.3\ac{sg}\scsub{[dat]} \ac{rp}.\ac{sg
 
 The two examples in which the nominative and the dative compete are highlighted in Table \ref{tbl:summary-old-high-german-nom-dat}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Old High German headless relatives (\ac{nom} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -454,7 +454,7 @@ be.\ac{pres}.2\ac{sg} -2\ac{sg}.\ac{nom} now truly {great}.\ac{cmpr}\scsub{[dat]
 
 The two examples in which the accusative and the dative compete are highlighted in Table \ref{tbl:summary-old-high-german-acc-dat}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Old High German headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -513,7 +513,7 @@ Note that the two languages of the unrestricted type that I discuss are both ext
 
 This section discusses the situation in which only the internal case is allowed to surface when it wins the case competition. When the internal case wins the case competition, the result is ungrammatical. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-only-int-repeated}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Pattern of the internal-only type of language (repeated)}
   \begin{tabular}{c|c|c|c}
@@ -576,7 +576,7 @@ The relative pronoun \tit{wem} `\ac{rp}.\ac{an}.\ac{dat}' appears in the interna
 
 These findings can be summarized as in Table \ref{tbl:summary-mg-matching}.
 
-\begin{table}[ht]
+\begin{table}[H]
  \center
  \caption{Modern German headless relatives (matching)}
  \begin{tabular}{c|c|c|c}
@@ -663,7 +663,7 @@ Notice that this type of example is crucially different from the Old High German
 
 The two examples in which the nominative and the accusative compete are highlighted in Table \ref{tbl:case-competition-mg-nom-acc}.
 
- \begin{table}[ht]
+ \begin{table}[H]
    \center
    \caption{Modern German headless relatives (\ac{nom} --- \ac{acc})}
    \begin{tabular}{c|c|c|c}
@@ -738,7 +738,7 @@ This example is also ungrammatical: in addition to the most complex case not bei
 
 The two examples in which the nominative and the dative compete are highlighted in Table \ref{tbl:case-competition-mg-nom-dat}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Modern German headless relatives (\ac{nom} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -813,7 +813,7 @@ This example is also ungrammatical: in addition to the most complex case not bei
 
 The two examples in which the nominative and the dative compete are highlighted in Table \ref{tbl:case-competition-mg-acc-dat}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Modern German headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -848,7 +848,7 @@ The dark gray marking corresponds to \ref{ex:mg-dat-acc}, in which the external 
 
 In sum, Modern German is an instance of a language that only allows the internal case to surface. The relative pronoun surfaces in the most complex case, but only when this more complex case is the internal case.\footnote{
 Another language that seems to be of the internal-only type is Finnish. The data I discuss is taken from \citet{bresnan1978} after \citet{carlson1977}.
-The two cases that are compared are the partitive and the elative. I assume that the elative is a more complex case than the partitive. I believe so because the partitive can be syncretic with the accusative (and genitive), and the elative is a locative case \citep{karlsson2013}. Locatives are more complex than `structural' cases \citep[cf.]{caha2009}.
+The two cases that are compared are the partitive and the elative. I assume that the elative is a more complex case than the partitive. I believe so because the partitive can be syncretic with the accusative (and genitive), and the elative is a locative case \citep{karlsson2013}. Locatives are more complex than `structural' cases \citep[cf.][]{caha2009}.
 
 Consider the example in \ref{ex:fin-ela-part}. In this example, the internal elative case competes against the external partitive case.
 The internal case is elative, as the predicate \tit{pitää} `like' takes elative objects.
@@ -885,7 +885,7 @@ I leave it for future research to find out whether other case combinations in Fi
 
 This section discusses the situation in which only the external case is allowed to surface when it wins the case competition. When the internal case wins the case competition, the result is ungrammatical. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-only-ext-repeated}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Pattern of the external-only type of language (repeated)}
   \begin{tabular}{c|c|c|c}
@@ -932,7 +932,7 @@ any parent.\ac{sg}.\ac{nom} food.\ac{sg}.\ac{acc} provide.\ac{pres}.3\ac{sg}\scs
 
 This example is compatible with the picture of Classical Greek only allowing the external case to surface when it wins the competition. I repeat Table \ref{tbl:case-competition-only-ext-repeated} from the beginning of this section as Table \ref{tbl:case-competition-ag-poss1}, and I mark the cell that corresponds to the example in \ref{ex:ag-dat-acc} in gray.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Classical Greek headless relatives possibility 1}
   \begin{tabular}{c|c|c|c}
@@ -964,7 +964,7 @@ This example is compatible with the picture of Classical Greek only allowing the
 
 However, the example in \ref{ex:ag-dat-acc} is not only compatible with the external-only type. Considering only the example I have given so far, it is still possible for Classical Classical Greek to be of the unrestricted type. I repeat Table \ref{tbl:case-competition-int-ext-repeated} from Section \ref{sec:pattern-i} as Table \ref{tbl:case-competition-ag-poss2}, and I mark the cell that corresponds to the example in \ref{ex:ag-dat-acc} in gray.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Classical Greek headless relatives possibility 2}
   \begin{tabular}{c|c|c|c}
@@ -1011,7 +1011,7 @@ The sentence in \ref{ex:ag-nom-acc} can also be analyzed as a headed relative, i
 
 This example shows that Classical Greek is not an instance of the third possible pattern, in which only the external case is allowed to surface. Instead, as illustrated by Table \ref{tbl:case-competition-classical-greek}, the language allows the internal case (marked light gray) and the external case (marked dark gray) to surface when either of them wins the case competition.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Summary of Classical Greek headless relatives}
   \begin{tabular}{c|c|c|c}
@@ -1051,7 +1051,7 @@ To sum up, to my knowledge, there is no language in which only the external case
 
 This section discusses the situation in which the case is neither the internal case nor the external case allowed to surface when either of them wins the competition. In other words, when the internal and the external case differ, there is no grammatical headless relative construction possible. Only when there is a tie, i.e. when the internal and external case match, there is a grammatical result. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-none-repeated}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{The matching type (repeated)}
   \begin{tabular}{c|c|c|c}
@@ -1104,7 +1104,7 @@ The relative pronoun \tit{komu} `\ac{rp}.\ac{an}.\ac{dat}' appears in the intern
 
 These findings can be summarized as in Table \ref{tbl:summary-polish-matching}.
 
-\begin{table}[ht]
+\begin{table}[H]
  \center
  \caption{Polish headless relatives (matching)}
  \begin{tabular}{c|c|c}
@@ -1174,7 +1174,7 @@ The two examples in which the accusative and the dative compete are highlighted 
 The light gray marking corresponds to \ref{ex:polish-acc-dat}, in which the internal dative wins over the external accusative, but the relative pronoun is not allowed to surface in the dative case (or in the losing accusative case as in \ref{ex:polish-acc-dat-u}).
 The dark gray marking corresponds to \ref{ex:polish-dat-acc}, in which the external dative wins over the internal accusative, but the relative pronoun is not allowed to surface in the dative case (or in the losing accusative case as in \ref{ex:polish-dat-acc-u}).
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Polish headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c}
@@ -1206,7 +1206,7 @@ In case competition in headless relatives two aspects play a role. The first one
 
 This generates the pattern shown in Table \ref{tbl:case-competition-table}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Relative pronoun follows case competition}
   \begin{tabular}{c|c|c|c}
@@ -1250,7 +1250,7 @@ The second aspect is whether the internal and the external case are allowed to s
 
 As far as I am aware, not all of these logical possibilities are attested in natural languages. I discuss the types one by one, and I give example when they are attested. In my description, I refer to the different gray-marking in Table \ref{tbl:case-competition-table-marking}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Relative pronoun follows case competition (with gray-marking)}
   \begin{tabular}{c|c|c|c}
@@ -1289,7 +1289,7 @@ Polish is an example of a language of the matching type in \ref{ex:matching}. In
 
 Figure \ref{fig:attested-headless-relatives-case-competition} shows a diagram that models the three attested patterns and not the unattested one. The diamonds stand for parameters that distinguish different types of languages. The texts along the arrows to the rectangles (and to a diamond) indicate how the different types of languages behave with respect to the parameters. The rectangles describe the form that the relative pronoun appears in. Below the rectangle I give examples of languages that are of this particular type.
 
-\begin{figure}[htbp]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
