--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -23,7 +23,7 @@ This chapter is structured as follows. First, I introduce a specific cumulative 
 \citet{caha2009,caha2013} (followed by \citealt[cf.][]{starke2009,bobaljik2012,mcfadden2018,smith2019,vanbaal2018}) has extensively argued that case should be decomposed into privative features. Specifically, the decomposition is cumulative: each case has a different number of case features, and the number grows one by one.
 This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the features that nominative has (here \tsc{k}1) plus one extra (here \tsc{k}2). Dative has all the features accusative has (\tsc{k}1 and \tsc{k}2) plus one extra (\tsc{k}3).
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
 	\caption {Cumulative case decomposition}
 		\begin{tabular}{ll}
@@ -55,7 +55,7 @@ The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive t
 Case syncretism follows the ordering of the case scale. Along this scale, only contiguous regions in the sequence are syncretic. In this section I show how case syncretism patterns can be derived from the case decomposition shown in Table \ref{tbl:case-decomposed}.
 In Table \ref{tbl:syncretisms-derive} I repeat the examples that shows the possible and impossible syncretism patterns.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Syncretism patterns in Germanic pronouns (repeated)}
     \input{tables/syncretism-nom-acc-dat.tex}
@@ -69,7 +69,7 @@ A lexical entry can be applied if it contains all features, as long as there is 
 
 Before I show how the four attested patterns can be derived (and the unattested one cannot), I need to make some theoretical assumptions explicit about Nanosyntax, the framework in which this dissertation is worked out. First, I show how the Nanosyntactic system is set up in such a way that morphological patterns (like syncretism, but also morphological containment) can inform us about the way syntax is structured. Therefore, I briefly discuss the general architecture of Nanosyntax, its postsyntactic lexicon, and the content and shape of lexical entries. Lastly, I discuss how multiple features (like \tsc{k}1, \tsc{k}2 and \tsc{k}3 from Table \ref{tbl:case-decomposed}) can be spelled out by a single phonological element using phrasal spellout.
 
-In Nanosyntax, syntax starts with atomic features, and it builds complex syntactic trees. Specifically, there are no `feature bundles' (from a pre-syntactic lexicon) that enter the syntax. The only way complex feature structures come to exist is a a result of merge.
+In Nanosyntax, syntax starts with atomic features, and it builds complex syntactic trees. Specifically, there are no `feature bundles' (from a pre-syntactic lexicon) that enter the syntax. The only way complex feature structures come to exist is a result of merge.
 After syntax (actually, each instance of merge), the syntactic structure is matched against the lexicon for pronunciation. The lexicon `translates' between lexical trees (i.e. syntactic representations) on the one hand and phonology (PF) and concepts (CF) on the other hand.\footnote{
 Throughout the dissertation I call the syntactic representations in the lexicon `lexical trees' in order to distinguish them from syntactic structures in the syntax.
 }
@@ -976,7 +976,7 @@ In sum, the cumulative case decomposition from Table \ref{tbl:case-decomposed} c
 
 Some languages morphologically reflect the case scale \ac{nom} < \ac{acc} < \ac{dat}. Khanty is an example of such a language. The phonological form of the accusative literally contains the phonological form of the nominative, and the form of the dative contains the form of the accusative. In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example from Khanty that shows morphological case containment in Table \ref{tbl:cont-khanty-3sg} \pgcitep{nikolaeva1999}{16}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Morphological case containment of 3\ac{sg} in Khanty}
     \input{tables/containment-nom-acc-dat.tex}
@@ -1098,7 +1098,7 @@ In its landing position the internal structure of the \ac{nom}P is no longer sho
        ]
    ]
 ]
-\draw[->,dashed] (src) to[out=south west,in=east] (tgt);
+\draw[->,dashed] (src) to[out=west,in=east] (tgt);
 \end{forest}
 \label{ex:khanty-luw-el-movement}
 
@@ -1187,7 +1187,7 @@ The same complement movement as before has to take place, which is shown in \ref
         ]
     ]
 ]
-\draw[->,dashed] (src) to[out=south west,in=east] (tgt);
+\draw[->,dashed] (src) to[out=west,in=east] (tgt);
 \end{forest}
 \label{ex:khanty-luw-el-na-movement}
 
@@ -1229,7 +1229,7 @@ The intuition is the following. Case competition in headless relatives reflects 
 
 I start with the competition between dative and accusative, in which dative wins. Table \ref{tbl:summary-gothic-deriving-datacc} shows the summary of the data pattern with the cells in which the dative and the accusative compete marked in gray.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Summary of Gothic headless relative (\tsc{dat} vs. \tsc{acc})}
   \begin{tabular}{c|c|c|c}
@@ -1288,7 +1288,7 @@ The larger structure wins over the smaller structure it contains: the dative win
 
 Next is the competition between dative and nominative, in which dative wins. Table \ref{tbl:summary-gothic-deriving-datnom} shows the summary of the data pattern with the cells in which the dative and the nominative compete marked in gray.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Summary of Gothic headless relative (\tsc{dat} vs. \tsc{nom})}
   \begin{tabular}{c|c|c|c}
@@ -1345,7 +1345,7 @@ The larger structure wins over the smaller structure it contains: the dative win
 
 Finally there is the competition between accusative and nominative, in which accusative wins. Table \ref{tbl:summary-gothic-deriving-accnom} shows the summary of the data pattern with the cells in which the accusative and the nominative compete marked in gray.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Summary of Gothic headless relative (\tsc{acc} vs. \tsc{nom})}
   \begin{tabular}{c|c|c|c}
