--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -575,7 +575,7 @@ The difference between the proximal, the medial and the distal cannot be observe
 
 I leave the deixis features out of the main discussion and the lexical entries because they are not relevant for the analysis.
 
-\subsection{Alternative segmatation of \tit{wer}}\label{sec:mg-w-er-cv}
+\subsection{Alternative segmentation of \tit{wer}}\label{sec:mg-w-er-cv}
 
 In Section \ref{sec:mg-rel} I analyzed the relative pronoun \tit{wer} (and \tit{wen} and \tit{wem}) as consisting of two morphemes: \tit{we} and \tit{r}. In this section I present an alternative to this. This alternative is to let \tit{wer} correspond two lexical entries of which the phonological part look as in \ref{ex:wer-cv}.
 
@@ -757,7 +757,7 @@ As usual, I mark this by circling the part of the structure that corresponds to 
 This spellout option corresponds to \ref{ex:spellout-algorithm-phrasal} in the Spellout Algorithm.
 
 There are more features in the functional sequence, so the next feature is merged.
-This next feature is the feature \tsc{an}, and a \tsc{an}P is created.
+This next feature is the feature \tsc{an}, and am \tsc{an}P is created.
 The syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}.
 Therefore, the \tsc{an}P is spelled out as \tit{n}, shown in \ref{ex:mg-spellout-n-cl-an}.
 
@@ -1119,7 +1119,7 @@ The \tsc{nom}P is spelled out as \tit{n}, and all constituents are merged back i
 \end{forest}
 \end{adjustbox}
 
-For the accusative relative pronoun, the last feature is merged: the \tsc{k}2. The derivation for \tsc{k}2 resembles the derivation of \tsc{k}1. The feature is merged with the existing syntactic structure, creating a \tsc{acc}P.
+For the accusative relative pronoun, the last feature is merged: the \tsc{k}2. The derivation for \tsc{k}2 resembles the derivation of \tsc{k}1. The feature is merged with the existing syntactic structure, creating an \tsc{acc}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
 Backtracking leads to splitting up the \tsc{rel}P from the \tsc{nom}P.
 The feature \tsc{k}2 is merged in both workspaces, so with the \tsc{rel}P and with the \tsc{nom}P. The spellout of \tsc{k}2 is successful when it is combined with the \tsc{nom}P.
@@ -1283,7 +1283,19 @@ I end up claiming that the phi and case feature portmanteau of the relative pron
     ]
 \end{forest}
 
-I give an example of an existing Modern German light-headed relative in \ref{ex:mg-den-wen}.\footnote{At least three speakers I consulted accept the example in \ref{ex:mg-den-wen}, but not every speaker of Modern German does.
+I give an example of an existing Modern German light-headed relative in \ref{ex:mg-den-wen}.\footnote{
+It seems light-headed relatives with inanimates, as in \ref{ex:mg-das-was}, are judged better than examples with animates \citep[cf.][ftn. 29]{hanink2018}. In turn, examples with different cases, as in \ref{ex:mg-wer-dem}, are judged worse than examples with matching cases, although they are still attested \citep[ftn. 6]{fuss2014}.
+
+\ex.
+\ag. Ich esse das, was ich mag.\\
+I hug \tsc{dem}.\tsc{n}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{n}.\tsc{sg}.\tsc{acc} I like\\
+`I eat that what I like.'\label{ex:mg-das-was}
+\bg. Wer das sagt, dem sind die mitleidigen Blicke gewiss.\\
+\tsc{rp}.\tsc{m}.\tsc{sg}.\tsc{nom} that says \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{dat} are the pitying looks certainly\\
+`He, who says that, certainly gets pitying looks.'\label{ex:mg-wer-dem}
+
+I do not have an explanation for why this should be the case.
+}\footnote{At least three speakers I consulted accept the example in \ref{ex:mg-den-wen}, but not every speaker of Modern German does.
 Most speakers prefer another light-headed relative, in which the relative pronoun is the \tsc{d}-pronoun, shown in \ref{ex:mg-den-den}. This relative pronoun generally appears in relative clauses headed by a full NP, shown in \ref{ex:mg-den-headed}. A combination between a full NP and a \tsc{wh}-pronoun is ungrammatical, as shown in \ref{ex:mg-wen-headed}.
 
 \ex.
@@ -1298,18 +1310,6 @@ I hug \tsc{d}.\tsc{m}.\tsc{sg}.\tsc{acc} man \tsc{rp}.\tsc{m}.\tsc{sg}.\tsc{acc}
 `I hug the man that I like.'\label{ex:mg-wen-headed}
 
 Even though not every speaker of Modern German fully accepts the combination of \tit{den} and \tit{wen} in \ref{ex:mg-den-wen}, almost all speakers I consulted judged it as more acceptable than the combination of a full NP and a \tsc{wh}-pronoun as in \ref{ex:mg-wen-headed}.
-}\footnote{
-It seems light-headed relatives with inanimates, as in \ref{ex:mg-das-was}, are judged better than examples with animates \citep[cf.][ftn. 29]{hanink2018}. In turn, examples with different cases, as in \ref{ex:mg-wer-dem}, are judged worse than examples with matching cases, although they are still attested \citep[ftn. 6]{fuss2014}.
-
-\ex.
-\ag. Ich esse das, was ich mag.\\
-I hug \tsc{dem}.\tsc{n}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{n}.\tsc{sg}.\tsc{acc} I like\\
-`I eat that what I like.'\label{ex:mg-das-was}
-\bg. Wer das sagt, dem sind die mitleidigen Blicke gewiss.\\
-\tsc{rp}.\tsc{m}.\tsc{sg}.\tsc{nom} that says \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{dat} are the pitying looks certainly\\
-`He, who says that, certainly gets pitying looks.'\label{ex:mg-wer-dem}
-
-I do not have an explanation for why this should be the case.
 }
 
 \exg. Ich umarme den, wen ich mag.\\
@@ -1673,7 +1673,7 @@ The external case is accusative, as the predicate \tit{einladen} `to invite' tak
 
 In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
 
-\begin{figure}[H]
+\begin{figure}[htbp]
   \center
   \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
@@ -1776,7 +1776,7 @@ The external case is dative, as the predicate \tit{vertrauen} `to trust' takes d
 
 In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
 
-\begin{figure}[H]
+\begin{figure}[htbp]
   \center
   \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
@@ -1812,7 +1812,7 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
       \end{forest}
       \\
       \toprule
-      \tsc{dat} relative pronoun \tit{we-n}
+      \tsc{acc} relative pronoun \tit{we-n}
       \\
       \cmidrule{1-1}
           \begin{forest} boom
@@ -1862,7 +1862,7 @@ The relative pronoun contains the \tsc{acc}P, so in principle the \tsc{acc}P cou
 The relative pronoun is not structurally contained in the light head. It lacks the complete constituent and \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, there is no grammatical headless relative possible.\footnote{
-None of the items can be deleted via formal containment either. The relative pronoun \tit{wen} and the extra light head \tit{m} do not show any formal containment.
+None of the elements can be deleted via formal containment either. The relative pronoun \tit{wen} and the extra light head \tit{m} do not show any formal containment.
 }
 
 For reasons of space I do not show the comparisons of the other situations in which the external case is more complex. These are situations in which the internal case is nominative and the external case is accusative and in which the internal case is nominative and the external case is dative. The same logic as I showed in Figure \ref{fig:mg-ext-wins} works for these situations too.\footnote{
@@ -1887,7 +1887,7 @@ Therefore, the extra light head can be deleted, and the surface element is the r
 
 Modern German is an example of an internal-only type of language. This means that headless relatives are grammatical in the language, as long as the internal and external case match or the internal case is the more complex one.
 
-I derive this from the internal syntax of light heads and relative pronouns in Modern German. The features of the light head are spelled out by a single lexical entry, which spells out phi and case features. The features of the relative pronoun are spelled out by the same lexical entry plus one which amongst other spells out a relative feature. The internal syntax of the Modern German light head and relative pronoun are shown in Figure \ref{fig:rel-lh-mg-sum}.
+I derive this from the internal syntax of light heads and relative pronouns in Modern German. The features of the light head are spelled out by a single lexical entry, which spells out phi and case features. The features of the relative pronoun are spelled out by the same lexical entry plus one which amongst other spells out a relative feature. The internal syntax of the Modern German light head and relative pronoun is shown in Figure \ref{fig:rel-lh-mg-sum}.
 
 \begin{figure}[H]
   \center
