--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -4,7 +4,7 @@
 
 In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the matching type have a lexical entry that spells out phi features and another one that spells out case features. This is the crucial difference with internal-only languages such as Modern German, that have a portmanteau for phi and case features. It means that the internal syntax of light heads and relative pronouns looks as shown in Figure \ref{fig:rel-lh-matching-simple}.
 
-\begin{figure}[htbp]
+\begin{figure}[H]
   \center
   \begin{tabular}[b]{ccc}
       \toprule
@@ -69,7 +69,7 @@ In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the matching t
 
 These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl:overview-matching}.
 
-\begin{table}[htbp]
+\begin{table}[H]
   \center
   \caption{Grammaticality in the matching type (repeated)}
   \begin{adjustbox}{max width=\textwidth}
@@ -108,7 +108,7 @@ In this situation, whether there is a phi and case feature portmanteau (as in in
 
 In Chapter \ref{ch:typology}, I showed that Polish is a language of the matching type. In this chapter, I show that Polish light heads and relative pronouns have the type of internal syntax described in Figure \ref{fig:rel-lh-matching-simple}. I give a compact version of the internal syntax of Polish light heads and relative pronouns in Figure \ref{fig:rel-lh-pol}.
 
-\begin{figure}[htbp]
+\begin{figure}[H]
   \center
   \begin{adjustbox}{max width=\textwidth}
     \begin{tabular}[b]{ccc}
@@ -186,7 +186,7 @@ Throughout this chapter, I discuss the exact feature content of relative pronoun
 
 The chapter is structured as follows.
 First, I discuss the relative pronoun. I decompose it into the three morphemes I showed in Figure \ref{fig:rel-lh-pol}. Then I show which features each of the morphemes corresponds to.
-Then I discuss the light head. I argue that Polish headless relatives are, just as Modern German headless relatives, derived from a type of light-headed relative clause that does not surface in the language. I show that the light head corresponds to one of the morphemes of the relative pronoun (the \tsc{k}P in Figure \ref{fig:rel-lh-pol}).
+Then I discuss the light head. I argue that Polish headless relatives are, just as Modern German headless relatives, derived from a type of light-headed relative clause that does not surface in the language. I show that the light head corresponds to two of the morphemes of the relative pronoun (the ϕP and the \tsc{k}P in Figure \ref{fig:rel-lh-pol}).
 Importantly, the features that form the Polish light head and relative pronoun are the same ones that form the Modern German light head and relative pronoun. The only difference between the two languages is how the features are spelled out.
 Finally, I compare the internal syntax of the light head and the relative pronoun. I show that the light head can only be deleted when the internal case matches the external case. When the internal and external case differ, none of the elements can be deleted.
 
@@ -239,7 +239,7 @@ I show the complete structure that I work towards in this section in \ref{ex:pol
 \ex.\label{ex:pol-rp}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-  [\tsc{rel}P, s sep=35mm
+  [\tsc{rel}P, s sep=37.5mm
       [\tsc{rel}P,
       tikz={
       \node[label=below:\tit{k},
@@ -303,7 +303,7 @@ These two morphemes correspond to what I called the case feature morpheme in Cha
 
 To determine their exact feature content, I first focus on \tit{mu}. Then, I extend the analysis to \tit{go}. The morpheme \tit{mu} (and also the \tit{go}) do not only appear in relative pronouns. They also show up as nominal endings, adjectival endings and in other pronominal forms. Interestingly, forms containing \tit{mu} are often syncretic between masculine dative and neuter dative. Consider Table \ref{tbl:pol-datives}.
 
-\begin{table}[htbp]
+\begin{table}[H]
   \center
   \caption{Syncretism in dative neuter pronouns in Polish \pgcitep{swan2002}{156,171}}
   \begin{tabular}[b]{ccc}
@@ -318,7 +318,7 @@ To determine their exact feature content, I first focus on \tit{mu}. Then, I ext
   \label{tbl:pol-datives}
 \end{table}
 
-The table shows three forms: the \tit{je}-pronoun is the long version of the third person singular pronoun (not the clitic), the \tit{n}-pronoun is the third person singular pronoun used after prepositions \pgcitep{swan2002}{156-157}, and the \tsc{dem} is the demonstrative.
+The table shows three forms: the \tit{je}-pronoun (the long version of the third person singular pronoun), the \tit{n}-pronoun (the third person singular pronoun used after prepositions) \pgcitep{swan2002}{156-157}, and the \tsc{dem} (the demonstrative).
 In all three forms there is a syncretism between the neuter and the masculine in the dative case. The complete pronouns are syncretic. I set up a system that can derive the syncretism between the two genders. Doing this allows me to establish which features the morpheme \tit{mu} spells out.
 
 I discussed in Chapter \ref{ch:decomposition} that syncretisms can be derived in Nanosyntax via the Superset Principle. The lexicon contains a lexical entry that is specified for the form that corresponds to most features. To illustrate this, I repeat the lexical entry for the Dutch \tit{jullie} `you' in \ref{ex:dutch-jullie-lexicon-rep}.
@@ -376,7 +376,9 @@ Following the functional sequence I suggested in Chapter \ref{ch:deriving-onlyin
 
 The forms \tit{jemu}, \tit{niemu} and \tit{temu} are syncretic between the masculine and the neuter. This can be captured if the highest feature in the lexical tree is the feature that distinguishes masculine and neuter gender.
 This distinguishing feature is the feature \tsc{an} \citep{harley2002}, which is not the highest feature in \ref{ex:pol-mu-dat-fseq}. Fortunately, different from \tit{jullie}, \tit{jemu}, \tit{niemu} and \tit{temu} are (at least) bimorphemic: they contain morphemes \tit{je}, \tit{nie} or \tit{te} and the morpheme \tit{mu}. The highest feature of one of the two morphemes needs to be the feature \tsc{an}.
-I suggest that this is the case for \tit{je}, \tit{nie} and \tit{te}, as shown in \ref{ex:pol-entry-nie/je/te}.
+I suggest that this is the case for \tit{je}, \tit{nie} and \tit{te}, as shown in \ref{ex:pol-entry-nie/je/te}.\footnote{
+Actually, I assume \tit{je}, \tit{nie} and \tit{te} to be morphologically complex, but I do not discuss this, as this is not relevant for the discussion here.
+}
 
 \ex. \label{ex:pol-entry-nie/je/te}
 \begin{forest} boom
@@ -392,9 +394,9 @@ I suggest that this is the case for \tit{je}, \tit{nie} and \tit{te}, as shown i
   {\draw (.east) node[right]{⇔ \tit{je/nie/te}}; }
 \end{forest}
 
-This means that \tit{je}, \tit{nie} and \tit{te} spell out gender features and other features, which differ per form and I refer to here as XP.
+This means that \tit{je}, \tit{nie} and \tit{te} spell out gender features and other features, which differ per form and I call XP here.
 
-Since the feature \tsc{an} is the topmost feature in the lexical tree, it can be the forms can easily spell both the structure with or without the feature \tsc{an}. This means that \tit{je}, \tit{nie} and \tit{te} correspond to the masculine or to the neuter form.
+Since the feature \tsc{an} is the topmost feature in the lexical tree, it can spell out a structure with or without the feature \tsc{an}. This means that \tit{je}, \tit{nie} and \tit{te} correspond to the masculine or to the neuter form.
 
 In \ref{ex:pol-spellout-nie/je/te-an}, I give the syntactic structure of a masculine form.
 
@@ -488,7 +490,7 @@ I show that this morpheme corresponds to pronominal features and gender features
 First I show that the \tit{o} does not only appear in animate relative pronouns, but also in the inanimate relative pronoun and even in other pronouns. I go through this rather long reasoning to show that \tit{o} is present in pronominal environments, even though it does not surface as an \tit{o}.
 Consider the relative pronouns in Table \ref{tbl:pol-rps}.
 
-\begin{table}[htbp]
+\begin{table}[H]
   \center
   \caption{Polish (in)animate relative pronouns \pgcitep{swan2002}{160}}
   \begin{tabular}[b]{ccc}
@@ -514,9 +516,9 @@ This does not change anything about the main point about case I want to make: th
 The forms differ in their initial consonant and the vowel. The animates have a \tit{k} and an \tit{o} or \tit{i}, and the inanimates have a \tit{cz} and an \tit{e} or \tit{y}.
 
 There are several ways to analyze this.
-The first possibility is to not decompose the portion before the suffix. Under this analysis, Polish has the morphemes \tit{ko}, \tit{ki}, \tit{cze} and \tit{czy}. The point that is missed is that the animates always have a \tit{k} and inanimates always have a \tit{cz}.
+The first possibility is to not decompose the portion before the suffix. Under this analysis, Polish has the morphemes \tit{ko}, \tit{ki}, \tit{cze} and \tit{czy}. The point that is missed then is that the animates always have a \tit{k} and inanimates always have a \tit{cz}.
 
-A second possibility that captures this observation is an analysis in which Polish has the morphemes \tit{k}, \tit{o}, \tit{i} and \tit{cz}, \tit{e} and \tit{y}.\footnote{
+A second possibility that captures this last observation is an analysis in which Polish has the morphemes \tit{k}, \tit{o}, \tit{i} and \tit{cz}, \tit{e} and \tit{y}.\footnote{
 This is more or less what \citet{wiland2019} proposes.
 }
 What is not captured now is that numerous \tsc{wh}-elements in Polish start with a \tit{k}. I give some examples in \ref{ex:pol-wh-k}.\footnote{
@@ -536,7 +538,8 @@ Moreover, according to \pgcitet{swan2002}{23} \tit{cz} is not a primary consonan
 
 I propose that one of the environments in which \tit{k} goes to \tit{c} and \tit{cz} is the inanimate relative pronouns.
 I suggest that the morphophonological environment that turns \tit{k} into \tit{c} and \tit{cz} is the presence of an \tit{i} in the inanimate relative pronoun paradigm.\footnote{
-Phonologically, the \tit{k} corresponds to /k/, the \tit{c} corresponds to /ts/ and the \tit{cz} corresponds to the /tʂ/.
+Phonologically, the \tit{k} corresponds to /k/, the \tit{c} corresponds to /ts/ and the \tit{cz} corresponds to the /tʂ/ \pgcitep{swan2002}{7}.
+For readability I give the orthographic forms and not the phonological ones in this section.
 } The presence of \tit{i} also causes other phonological changes to take place.
 In the animate relative pronoun these phonological changes do not take place, since there the morpheme \tit{i} is not present.\footnote{
 As first sight, there seems to be a contradiction here: the inanimate is featurally speaking less complex than the animate  \citep[cf.][]{harley2002}, but morphologically the inanimate is more complex than the animate: it contains the additional morpheme \tit{i}. I return to this point in footnote \ref{ftn:inam-pointer} of this chapter to show how this apparent contradiction can be resolved.
@@ -546,7 +549,7 @@ In Table \ref{tbl:pol-rp-underl}, I show the animate relative pronouns on the le
 I do not decompose the animate nominative relative pronoun (unlike \citealt{wiland2019}, who identifies the \tit{t} as the demonstrative stem). My reason for not decomposing \tit{kto} is that it does not contain a suffix that can be observed elsewhere in the language (unlike the other cases which can be found in for instance adjectival inflection, see \citealt{swan2002}{126}). Therefore, I assume \tit{kto} to be a fixed expression. I do not give a detailed analysis of the pronoun, as it is not a form I discuss in my derivations.
 }
 
-\begin{table}[htbp]
+\begin{table}[H]
   \center
   \caption{Underlying forms of Polish (in)animate relative pronouns}
   \begin{tabular}[b]{ccc}
@@ -564,9 +567,9 @@ I do not decompose the animate nominative relative pronoun (unlike \citealt{wila
 \end{table}
 
 Under this analysis, Polish only has the morphemes \tit{k}, \tit{o} and \tit{i} that can be observed in the animate plus an \tit{i} that is present throughout the whole paradigm in the inanimate.
-I put the underlying forms and the surface form of the inanminate relative pronoun side by side in Table \ref{tbl:pol-rps-underl-real}.
+I place the underlying forms and the surface form of the inanminate relative pronoun side by side in Table \ref{tbl:pol-rps-underl-real}.
 
-\begin{table}[htbp]
+\begin{table}[H]
   \center
   \caption{Underlying and surface forms of Polish inanimate relative pronouns}
   \begin{tabular}[b]{ccc}
@@ -588,14 +591,14 @@ Under this analysis, the \tsc{wh}-element \tit{czyj} `whose' is underlyingly \ti
 }
 To get from the underlying form to the surface form, several phonological processes are taking place, which are all independently observed within Polish. First I discuss the instrumental, in which \tit{k-i-i} becomes \tit{czy}.
 
-I start with the combination of /k/ and /i/ becoming /i/, as shown in \ref{ex:pol-phon-k+i}.
+I start with the combination of \tit{k} and \tit{i} becoming \tit{c}, as shown in \ref{ex:pol-phon-k+i}.
 
 \ex.\label{ex:pol-phon-k+i}
-/k/ + /i/ → /c/
+\tit{k} + \tit{i} → \tit{c}
 
 Consider the paradigm for the singular of \tit{lampa} `light' and the singular of \tit{córka} `daugther' in Table \ref{tbl:pol-jk-to-c}.
 
-\begin{table}[htbp]
+\begin{table}[H]
   \center
   \caption{Polish feminine nouns with hard p/k stem \pgcitep{swan2002}{47,49}}
   \begin{tabular}[b]{ccc}
@@ -613,14 +616,14 @@ Consider the paradigm for the singular of \tit{lampa} `light' and the singular o
 \end{table}
 
 The stem and the suffixes are identical in both paradigms, except for in the dative.\footnote{
-There is also the change from /i/ to /y/ in the genitive of \tit{lampa}.
+There is also the change from \tit{i} to \tit{y} in the genitive of \tit{lampa}.
 }
 There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \tit{c}. Also, part of the suffix, the \tit{i}, has disappeared. Analyzing \tit{córce} as \tit{córk-i-e} brings back regularity in the paradigm. Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{c-i-m}.
 
 I continue with the combination of \tit{c} and \tit{i} becoming \tit{czy}, as shown in \ref{ex:pol-phon-c+i}.
 
 \ex.\label{ex:pol-phon-c+i}
-\a. /c/ + /i/ → /czy/
+\a. \tit{c} + \tit{i} → \tit{czy}
 
 This change can be independently observed in \ref{ex:pol-waltz}.
 
@@ -632,7 +635,7 @@ The noun \tit{walc} `waltz' combines with the diminutive marker \tit{ik}. The se
 
 I repeat the table with the underlying and surface forms in Table \ref{tbl:pol-rps-underl-real-rep}. Compare the nominative and the accusative to the genitive and the dative.
 
-\begin{table}[htbp]
+\begin{table}[H]
   \center
   \caption{Underlying and surface forms of Polish inanimate relative pronouns}
   \begin{tabular}[b]{ccc}
@@ -654,20 +657,20 @@ The sequence \tit{k-i-o} changes into \tit{co} in the nominative and accusative.
 I start by looking at the nominative and the accusative. Here only one phonological change seems to take place, which is the combination of \tit{k} and \tit{i} becoming \tit{c}, which I also showed for the instrumental. I repeat it in \ref{ex:pol-phon-k+i-rep}.
 
 \ex.\label{ex:pol-phon-k+i-rep}
-/k/ + /i/ → /c/
+\tit{k} + \tit{i} → \tit{c}
 
 Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{co}.
 
-Now consider the genitive and the dative. If here only the \tit{k} plus \tit{i} becomes \tit{c} change takes place, the result would \tit{c-o-go}/\tit{c-o-mu}, which is incorrect. The sequence \tit{c-o} should somehow still change into \tit{cze}. Now assume that in the genitive and the dative the \tit{i} would have `double effect', meaning that it also has an influence on the vowel \tit{o}. Before I discuss how the \tit{i} can sometimes have a `double effect' and sometimes `single effect', I show that the required phonological processes are attested in Polish.
+Now consider the genitive and the dative. If here only the \tit{k} plus \tit{i} becomes \tit{c} change takes place, the result would \tit{c-o-go}/\tit{c-o-mu}, which is incorrect. The sequence \tit{c-o} should somehow still change into \tit{cze}. Now assume that in the genitive and the dative the \tit{i} would have double effect, meaning that it also has an influence on the vowel \tit{o}. Before I discuss how the \tit{i} can sometimes have a double effect and sometimes single effect, I show that the required phonological processes are attested in Polish.
 
 I start with the combination of \tit{i} and \tit{o} becoming \tit{e}, as shown in \ref{ex:pol-phon-i+o}.
 
 \ex.\label{ex:pol-phon-i+o}
-/i/ + /o/ → /e/
+\tit{i} + \tit{o} → \tit{e}
 
 Consider the paradigm for the singular of \tit{biurko} `desk' and the singular of \tit{słońce} `sun' in Table \ref{tbl:pol-io-to-e}.
 
-\begin{table}[htbp]
+\begin{table}[H]
   \center
   \caption{Polish neuter nouns with hard k/c stem \pgcitep{swan2002}{116,117}}
   \begin{tabular}[b]{ccc}
@@ -693,7 +696,7 @@ Assuming that this change also takes place in the inanimate relative pronoun, th
 I continue with the change in which the combination of \tit{c} and \tit{e} become \tit{cze}, as shown in \ref{ex:pol-phon-ce}.
 
 \ex.\label{ex:pol-phon-ce}
-/c/ + /e/ → /cze/
+\tit{c} + \tit{e} → \tit{cze}
 
 I give the example in which the combination of \tit{c} and \tit{e} results in \tit{cze} in \ref{ex:pol-father}.
 
@@ -704,14 +707,14 @@ I give the example in which the combination of \tit{c} and \tit{e} results in \t
 The noun \tit{ojc} `father' combines with the vocative marker \tit{e}. The sequence \tit{c-e} changes to \tit{cze}. Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{cze-go}/\tit{cze-mu}.
 
 It is crucial for the analysis that the \tit{i} in \tit{co} has a single effect, and it only affects the initial consonant. In the genitive and the dative there is a double effect, and both the initial consonant and the vowel are affected. I propose that this difference is not due to a difference in the \tit{i}, but a difference in the \tit{o}. Morphologically, the \tit{o} in the genitive and dative spells out different features than the \tit{o} in the nominative and the accusative, such as nominative and accusative case, which in the case of the genitive and dative are realized by \tit{go} and \tit{mu}. As the two forms are morphologically different, they have separate lexical entries, and they can correspond to different phonology. The phonological representation of the \tit{o} in the nominative and accusative should be such that it resists the effect of the \tit{i}, and the \tit{o} in the genitive and dative should welcome the effect of the \tit{i}. I do not work out a phonological proposal for how this works.\footnote{
-Maybe it is possible to analyze the \tit{o} in the nominative and accusative as an \tit{o} without a slot for a vowel and the \tit{o} in the genitive and dative as an \tit{o} plus a slot for a vowel.
+Maybe it is possible to analyze the \tit{o} in the nominative and accusative as an \tit{o} plus a slot for a vowel and the \tit{o} in the genitive and dative as an \tit{o} without a slot for a vowel. The vowel in the genitive and the dative then needs to share a vowel slot with a different vowel, in this case the \tit{i}.
 }
 
 The conclusion I draw from this rather long reasoning is that the morpheme \tit{o} in \tit{kogo} and \tit{komu} is not specific to animate relative pronouns, but it also appears elsewhere, for instance in inanimate relative pronouns, demonstratives and in the \tit{n}- and \tit{je}-pronouns, as shown in Table \ref{tbl:pol-o-everywhere}.\footnote{
 In this dissertation I do not discuss the exact feature content that corresponds to \tit{i}. I assume it spells out features that have to do with being strong pronouns. See footnote \ref{ftn:inam-pointer} of this chapter for why the morpheme is not inserted in animate relative pronouns.
 }
 
-\begin{table}[htbp]
+\begin{table}[H]
   \center
   \caption{Underlying and surface forms of Polish dative pronouns}
   \begin{tabular}[b]{ccc}
@@ -858,7 +861,7 @@ In what follows, I show how the Polish relative pronouns are constructed. I foll
 Starting the derivation from the bottom, the first two features that are merged are \tsc{ref} and \tsc{cl}, creating a \tsc{cl}P.
 The syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-o-rep-rp}, which corresponds to \tit{o}.
 Therefore, the \tsc{cl}P is spelled out as \tit{o}, which I do not show here.
-Then, the feature \tsc{an} is merged, and a \tsc{an}P is created.
+Then, the feature \tsc{an} is merged, and an \tsc{an}P is created.
 The syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-o-rep-rp}.
 Therefore, the \tsc{an}P is spelled out as \tit{o}, shown in \ref{ex:pol-spellout-o-rel}.
 
@@ -915,7 +918,7 @@ In its landing position the internal structure of the \tsc{an}P is no longer sho
           ]
       ]
   ]
-\draw[->,dashed] (src) to[out=south west,in=east] (tgt);
+\draw[->,dashed] (src) to[out=south west,in=south east] (tgt);
 \end{forest}
 
 The \#P has a different internal syntax now. It still contains the feature \#, but the \tsc{an}P is no longer a sister of \#. Now the \tsc{an}P is moved away, the \#P forms a constituent in the lexical tree of \ref{ex:pol-entry-go-rep-rp}.
@@ -951,7 +954,7 @@ Therefore, the \tsc{wh}P is spelled out as \tit{k}. The newly created phrase is 
 \ex.\label{ex:pol-spellout-whp}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-  [\tsc{wh}P, s sep=25mm
+  [\tsc{wh}P, s sep=26mm
       [\tsc{wh}P,
       tikz={
       \node[label=below:\tit{k},
@@ -1015,7 +1018,7 @@ This syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-
 The \tsc{nom}P is spelled out as \tit{go}, and the \tsc{nom}P is merged back to the existing syntactic structure.
 
 For the accusative relative pronoun, the last feature on the functional sequence is the feature \tsc{k}2. Its derivation proceeds the same as the one for the feature \tsc{k}1.
-The feature \tsc{k}2 is merged with the existing syntactic structure, creating a \tsc{acc}P.
+The feature \tsc{k}2 is merged with the existing syntactic structure, creating an \tsc{acc}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
 Backtracking leads to splitting up the \tsc{rel}P from the \tsc{nom}P.
 The feature \tsc{k}2 is merged in both workspaces, so with the \tsc{rel}P and and with the \tsc{nom}P. None of these phrases form a constituent in any of the lexical trees in the language's lexicon.
@@ -1026,7 +1029,7 @@ The \tsc{acc}P is spelled out as \tit{go}, and the \tsc{acc}P is merged back to 
 \ex.\label{ex:pol-spellout-rel-acc}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-  [\tsc{rel}P, s sep=35mm
+  [\tsc{rel}P, s sep=37.5mm
       [\tsc{rel}P,
       tikz={
       \node[label=below:\tit{k},
@@ -1092,7 +1095,7 @@ The \tsc{dat}P is spelled out as \tit{mu}, and the \tsc{dat}P is merged back to 
 \ex.\label{ex:pol-spellout-rel-dat}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-  [\tsc{rel}P, s sep=35mm
+  [\tsc{rel}P, s sep=37.5mm
       [\tsc{rel}P,
       tikz={
       \node[label=below:\tit{k},
@@ -1112,7 +1115,7 @@ The \tsc{dat}P is spelled out as \tit{mu}, and the \tsc{dat}P is merged back to 
               ]
           ]
       ]
-      [\tsc{dat}P, s sep=30mm
+      [\tsc{dat}P, s sep=32.5mm
       [\tsc{an}P,
           tikz={
           \node[label=below:\tit{o},
@@ -1193,7 +1196,7 @@ As I suggested in Chapter \ref{ch:deriving-onlyinternal} for Modern German, I en
 \ex.\label{ex:pol-elh}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-  [\tsc{k}P, s sep=25mm
+  [\tsc{k}P, s sep=27.5mm
       [\tsc{an}P,
       tikz={
       \node[label=below:\tit{o},
@@ -1237,7 +1240,7 @@ First, in headless relatives the morpheme \tit{kolwiek} `ever' can appear, as sh
 
 \exg. Jan śpiewa co -kolwiek Maria śpiewa.\\
 Jan sings \tsc{rp}.\tsc{an}.\tsc{acc} ever Maria sings\\
-`Jan sings everything Maria sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headless-ever}
+dJan sings everything Maria sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headless-ever}
 
 Light-headed relatives do not allow this morpheme to be inserted, illustrated in \ref{ex:pol-headed-ever}.\footnote{
 \citet{citko2004} takes the complementary distribution of \tit{kolwiek} `ever' and the demonstrative to mean that they share the same syntactic position. I have nothing to say about the exact syntactic position of \tit{ever}, but in my account it cannot be the head of the relative clause, as this position is reserved for the extra light head. My reason for the incompatibility of \tit{ever} and the demonstrative is that they are semantically incompatible.
@@ -1248,7 +1251,7 @@ Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} ever 
 `John sings what Mary sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headed-ever}
 
 The second argument against the existing light-headed relatives being the source of headless relatives comes from their interpretation. Headless relatives have two possible interpretations, and light-headed relatives have only one of these.
-just as in Modern German, Polish headless relatives can be analyzed as either universal or definite \pgcitep{citko2004}{103}.
+Just as in Modern German, Polish headless relatives can be analyzed as either universal or definite \pgcitep{citko2004}{103}.
 Light-headed relatives, such as the one in \ref{ex:pol-light-headed}, only have the definite interpretation.
 
 Just as I did for Modern German, I conclude that Polish headless relatives are not derived from a light-headed relative headed by a demonstrative. I suggest that Polish headless relatives are also derived from light-headed relatives headed by an extra light head.
@@ -1397,7 +1400,7 @@ The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is
 \ex.\label{ex:pol-elh-acc}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-  [\tsc{acc}P, s sep=25mm
+  [\tsc{acc}P, s sep=27.5mm
       [\tsc{an}P,
       tikz={
       \node[label=below:\tit{o},
@@ -1437,7 +1440,7 @@ This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu-rep-lh}, so
 \ex.\label{ex:pol-elh-dat}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-  [\tsc{dat}P, s sep=30mm
+  [\tsc{dat}P, s sep=32.5mm
       [\tsc{an}P,
       tikz={
       \node[label=below:\tit{o},
@@ -1473,7 +1476,7 @@ This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu-rep-lh}, so
 \end{forest}
 \end{adjustbox}
 
-In sum, Polish headless relatives are derived from a light-headed relative with an extra light head, just as they are in Modern German. The extra light head is spelled out a lexical entry that spells out phi features and another one that spells out case features. The lexical entries used to spell this light head out are also used to spell out part of the internal syntax of the relative pronoun.
+In sum, Polish headless relatives are derived from a light-headed relative headed by an extra light head, just as they are in Modern German. The extra light head is spelled out a lexical entry that spells out phi features and another one that spells out case features. The lexical entries used to spell this light head out are also used to spell out part of the internal syntax of the relative pronoun.
 
 
 \section{Comparing light heads and relative pronouns}\label{sec:comparing-polish}
@@ -1594,7 +1597,9 @@ I draw a dashed circle around the \tsc{acc}P, as it is the biggest possible elem
 
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
 This (higher) \tsc{acc}P is structurally contained in the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
-The surface element is the relative pronoun that bears the internal case: \tit{kogo}.
+The surface element is the relative pronoun that bears the internal case: \tit{kogo}.\footnote{
+The relative pronoun (\tit{kogo}) also formally contains the extra light head (\tit{ogo}). The extra light head could also be deleted via formal containment.
+}
 
 I continue with the example in which the internal case is more complex than the external case.
 Consider the examples in \ref{ex:polish-acc-dat-rep}, in which the internal dative case competes against the external accusative case. The relative clauses are marked in bold. It is not possible to make a grammatical headless relative in this situation.
@@ -1724,12 +1729,14 @@ Recall from Section \ref{sec:comparing-mg} that this is the crucial example in w
 In Modern German, extra light heads in a less complex case form a constituent that is structurally contained in the relative pronoun.
 In Polish, they do not.
 Relative pronouns in a complex case still contain all features of the extra light head in a less complex case, but the extra light head does not form a single constituent that is structurally contained in the relative pronoun. That is, the weaker feature containment requirement is met, but the stronger constituent containment requirement is not. This shows the necessity of formulating the proposal in terms of containment as a single constituent.\footnote{
-A single constituent that the relative pronoun contains is the \tsc{an}P. This could be deleted, leaving the \tsc{acc}P, spelled out as \tit{go}. This structure would then be ruled out, because \tit{go} cannot be the head of a relative clause. The same holds for only deleting \tit{go} and leaving \tit{o} behind.
+A single constituent that is contained in the relative pronoun is the \tsc{an}P. This could be deleted, leaving the \tsc{acc}P, spelled out as \tit{go}. This structure would then be ruled out, because \tit{go} cannot be the head of a relative clause. The same holds for only deleting \tit{go} and leaving \tit{o} behind.
 }
 
 The relative pronoun is not a constituent that is structurally or formally contained in the light head. It lacks the complete constituent and \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
-As a result, there is no grammatical headless relative possible.
+As a result, there is no grammatical headless relative possible.\footnote{
+None of the elements can be deleted via formal containment either. The relative pronoun \tit{komu} and the extra light head \tit{ogo} do not show any formal containment.
+}
 
 I end with the example in which the external case is more complex than the internal case.
 Consider the examples in \ref{ex:polish-dat-acc-rep}, in which the internal dative case competes against the external accusative case. The relative clauses are marked in bold. It is not possible to make a grammatical headless relative in this situation.
@@ -1857,15 +1864,17 @@ The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{k}3 tha
 
 The relative pronoun is not a constituent that is structurally contained in the light head. It lacks the complete constituent \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
-As a result, there is no grammatical headless relative possible.
+As a result, there is no grammatical headless relative possible.\footnote{
+None of the elements can be deleted via formal containment either. The relative pronoun \tit{kogo} and the extra light head \tit{omu} do not show any formal containment.
+}
 
 \section{Summary and discussion}
 
 Polish is an example of a matching type of language. This means that headless relatives are grammatical in the language only when the internal and external case match.
 
-I derive this from the internal syntax of light heads and relative pronouns in Polish. The features of the light head are spelled out by two lexical entries, which respectively spell out phi and case features. The features of the relative pronoun are spelled out by the same lexical entries plus one that amongst other spells out the relative feature. The internal syntax of the Polish light head and relative pronoun are shown in Figure \ref{fig:rel-lh-pol-sum}.
+I derive this from the internal syntax of light heads and relative pronouns in Polish. The features of the light head are spelled out by two lexical entries, which respectively spell out phi and case features. The features of the relative pronoun are spelled out by the same lexical entries plus one that amongst other spells out the relative feature. The internal syntax of the Polish light head and relative pronoun is shown in Figure \ref{fig:rel-lh-pol-sum}.
 
-\begin{figure}[htbp]
+\begin{figure}[H]
   \center
   \begin{adjustbox}{max width=\textwidth}
     \begin{tabular}[b]{ccc}
@@ -1938,12 +1947,12 @@ I derive this from the internal syntax of light heads and relative pronouns in P
 A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi and case features. Therefore, the light head is structurally contained in the relative pronoun when the internal and the external case match. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
 When the internal and external case differ, neither the light head nor the relative pronoun is structurally contained in the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
 
-In other words, the crucial difference between Modern German and Polish that leads them to be of different language types is that I analyze Modern German extra light heads as monomorphemic (e.g. \tit{n}) and Polish extra light heads as bimorphemic (e.g. \tit{o-go}).
+The crucial difference between Modern German and Polish that leads them to be of different language types is that I analyze Modern German extra light heads as monomorphemic (e.g. \tit{n}) and Polish extra light heads as bimorphemic (e.g. \tit{o-go}).
 This raises the question of whether Polish extra light heads could not be monomorphemic too. A possible hypothesis would be that the morpheme \tit{go} is the extra light head and not \tit{o-go}.
 
 A parallel between the Polish \tit{go} (and \tit{mu}) and the Modern German \tit{n} (and \tit{m}) is that they both surface as pronouns in their respective languages. However, there is a difference between the Polish \tit{go} and Modern German \tit{n}. The Polish \tit{go} is analyzed as a clitic \citep{swan2002}, whereas the Modern German \tit{n} is analyzed as a weak pronoun (see Section \ref{sec:mg-weak-pronoun}).
 According to \citet{cardinaletti1994}, clitics and weak pronouns differ from each other in that clitics cannot follow prepositions whereas weak pronouns can, and weak pronouns cannot follow dative objects whereas clitics can. Polish \tit{go} and \tit{mu} cannot follow prepositions \pgcitep{swan2002}{157}, whereas Modern German \tit{n} and \tit{m} can (see Section \ref{sec:mg-weak-pronoun}).\footnote{
-As I mentioned in Section \ref{sec:mg-weak-pronoun} not all speakers of Modern German allow the \tit{n} and \tit{m} to follow prepositions. This might suggests that these pronouns are clitics in their grammar, just as in Polish. This raises the question of whether these speakers are also as Polish speakers with the respect to headless relatives, in that they only accept matching cases (which is the version of Modern German described in \citealt{groos1981}).
+As I mentioned in Section \ref{sec:mg-weak-pronoun} not all speakers of Modern German allow the \tit{n} and \tit{m} to follow prepositions. This might suggests that these pronouns are clitics in their grammar, just as in Polish. This raises the question of whether these speakers are also like Polish speakers with the respect to headless relatives, in that they only accept matching cases (which is the version of Modern German described in \citealt{groos1981}).
 I do not investigate this question any further in this thesis.
 I also do not work out an analysis for the variety of Modern German in which \tit{n} and \tit{m} are clitics.
 }
