--- a/discussion.tex
+++ b/discussion.tex
@@ -10,7 +10,7 @@ A case more to the right on the scale wins over a case more to the left on the s
 
 Chapter \ref{ch:decomposition} showed that the case scale can be derived from assuming the cumulative case decomposition shown in Table \ref{tbl:case-decomposed-summary}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
 	\caption {Cumulative case decomposition (repeated)}
 		\begin{tabular}{ll}
@@ -29,7 +29,7 @@ A case wins over another case when it contains all features that the other case 
 
 The second aspect of case competition in headless relatives is introduced in Chapter \ref{ch:typology}. This concerns whether or not the winner of the case competition is allowed to surface when it wins the case competition. It differs from language to language whether they allow the internal and the external case to surface. Table \ref{tbl:languages-int-ext} gives an overview of the possible language types and whether they are attested.
 
-\begin{table}[htbp]
+\begin{table}[H]
   \center
   \caption{Possible language types and languages}
   \begin{adjustbox}{max width=\textwidth}
@@ -40,11 +40,11 @@ The second aspect of case competition in headless relatives is introduced in Cha
               & \tsc{k}\scsub{int} > \tsc{k}\scsub{ext}
               & \tsc{k}\scsub{ext} > \tsc{k}\scsub{int}
               & language \\
-                \cmidrule{2-3}
-unrestricted  & \tsc{int/ext} & \tsc{int} & \tsc{ext} & Gothic, Old High German, Ancient Greek  \\
-internal-only & \tsc{int/ext} & \tsc{int} & *         & Modern German                           \\
-external-only & \tsc{int/ext} & *         & \tsc{ext} & not attested                            \\
-matching      & \tsc{int/ext} & *         & *         & Polish                                  \\
+\cmidrule(lr){1-1} \cmidrule{2-3} \cmidrule(lr){4-4} \cmidrule(lr){5-5}
+unrestricted  & \tsc{int/ext} & \tsc{int} & \tsc{ext} & e.g. Old High German  \\
+internal-only & \tsc{int/ext} & \tsc{int} & *         & Modern German         \\
+external-only & \tsc{int/ext} & *         & \tsc{ext} & not attested          \\
+matching      & \tsc{int/ext} & *         & *         & Polish                \\
 \bottomrule
 \end{tabular}
 \end{adjustbox}
@@ -72,7 +72,7 @@ Chapter \ref{ch:without-case-competition} took a small detour to discuss languag
 
 The diagram in Figure \ref{fig:typology-summary} generates the four possible language types that I discussed in this dissertation.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}[b]{c}
@@ -133,7 +133,7 @@ Finally, in chapter \ref{ch:deriving-unrestricted}, I motivated the analysis for
 
 In sum, I reformulated two of the descriptive parameters from Figure \ref{fig:typology-summary} into parameters that can be observed within a language. I show the result in Figure \ref{fig:lexical-entries-summary}.
 
-\begin{figure}[!htbp]
+\begin{figure}[H]
   \centering
   \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}[b]{c}
