--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -627,7 +627,7 @@
   doi={10.1023/b:nala.0000005564.33961.e0}
 }
 
-@article{schwarz2009,
+@phdthesis{schwarz2009,
   title={Two types of definites in natural language},
   author={Schwarz, Florian},
   year={2009},
