--- a/introduction.tex
+++ b/introduction.tex
@@ -4,7 +4,7 @@
 
 This dissertation is about case competition, a situation in which two cases are assigned but only one of them surfaces. One of the constructions in which case competition takes place is in headless relatives, i.e. relative clauses that lack a head.
 
-This dissertation attempts to achieve two goals. The first one is to give an overview of the data. I show which aspects of case competition in headless relatives are crosslinguistically stable, which differ across languages, and whether all logically possible patterns are attested. My second goal is to provide an account for the observed data. I set up a proposal that generates the attested patterns and excludes the non-attested ones. Moreover, the variation between languages follows from properties of languages that can be independently observed.
+This dissertation attempts to achieve two goals. The first one is to give an overview of the data. I show which aspects of case competition in headless relatives are crosslinguistically stable, which differ across languages, and whether all logically possible patterns are attested. My second goal is to provide an account for the observed data. I set up a proposal that generates the attested patterns and excludes the non-attested ones. I let the variation between languages follow from properties of languages that can be independently observed.
 
 In this chapter I first introduce the topic of case competition in headless relatives.
 Then I give a brief description of the content and structure of the dissertation.
@@ -108,7 +108,7 @@ A case more to the right on the scale wins over a case more to the left on the s
 
 The case scale in \ref{ex:case-scale-content} generates the pattern shown in Table \ref{tbl:case-competition-cases}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{The winner of the case competition}
   \begin{tabular}{c|c|c|c}
@@ -145,7 +145,7 @@ In Chapter \ref{ch:decomposition}, I argue that there is a single trigger that i
 
 Part \ref{part:variation} of this dissertation introduces the second aspect that plays a role in case competition headless relatives. This aspect concerns whether the internal and the external case are allowed to surface when either of them wins the case competition. Consider Table \ref{tbl:case-competition-cases-colors}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{The winner of the case competition (\tsc{int}/\tsc{ext} marked)}
   \begin{tabular}{c|c|c|c}
