--- a/languages-without-case-competition.tex
+++ b/languages-without-case-competition.tex
@@ -8,7 +8,7 @@ In languages without case competition, the internal and external case do not com
 
 Table \ref{tbl:no-case-competition-int} shows the pattern of a language in which the relative pronoun always appears in the internal case.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Pattern of the always-internal type of language}
   \begin{tabular}{c|c|c|c}
@@ -42,7 +42,7 @@ In the second row, the internal case is nominative and the external case is nomi
 
 Table \ref{tbl:no-case-competition-ext} shows the pattern of a language in which the relative pronoun always appears in the external case.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Pattern of the always-external type of language}
   \begin{tabular}{c|c|c|c}
@@ -95,7 +95,7 @@ The relative pronoun \tit{ðam} `\ac{rp}.\ac{pl}.\ac{dat}' appears in the extern
 
 This example is compatible with three patterns. First, Old English could be a case competition language of the external-only type that only allows the external case to surface. I repeat Table \ref{tbl:case-competition-only-ext-repeated} from Section \ref{sec:pattern-iii} as Table \ref{tbl:oe-poss1}, and I mark the cell that corresponds to example \ref{ex:oe-dat-nom} in gray.
 
- \begin{table}[ht]
+ \begin{table}[H]
    \center
    \caption{Old English headless relatives possibility 1}
    \begin{tabular}{c|c|c|c}
@@ -127,7 +127,7 @@ This example is compatible with three patterns. First, Old English could be a ca
 
 Second, Old English could be a case competition language of the unrestricted type that allows the internal case and the external case to surface. I repeat Table \ref{tbl:case-competition-int-ext-repeated} from Section \ref{sec:pattern-i} as Table \ref{tbl:oe-poss2}, and I mark the cell that corresponds to example \ref{ex:oe-dat-nom} in gray.
 
-  \begin{table}[ht]
+  \begin{table}[H]
     \center
     \caption{Old English headless relatives possibility 2}
     \begin{tabular}{c|c|c|c}
@@ -159,7 +159,7 @@ Second, Old English could be a case competition language of the unrestricted typ
 
 Third, Old English could be a language without case competition of the always-external type that lets the relative pronoun appear in the external case. I repeat Table \ref{tbl:no-case-competition-ext} from the introduction of the chapter as Table \ref{tbl:oe-poss3}, and I mark the cell that corresponds to example \ref{ex:oe-dat-nom} in gray.
 
- \begin{table}[ht]
+ \begin{table}[H]
    \center
    \caption{Old English headless relatives possibility 3}
    \begin{tabular}{c|c|c|c}
@@ -208,7 +208,7 @@ The relative pronoun appears in the external case, which is the least complex ca
 This example shows that Old English is neither an instance of the pattern in Section \ref{sec:pattern-iii}, in which only the external case is allowed to surface, nor is it an instance of the pattern in Section \ref{sec:pattern-i}, in which the internal case and external case are allowed to surface.
 Instead, as illustrated by Table \ref{tbl:no-case-competition-old-english}, the language does not have any case competition. The relative pronoun appears in the external case: the external case can be the most complex case, illustrated by the example in \ref{ex:oe-dat-nom}, marked here in light gray, or it can be the least complex case, illustrated by the example in \ref{ex:oe-acc-dat}, marked here in dark gray.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Summary of Old English headless relatives}
   \begin{tabular}{c|c|c|c}
@@ -253,7 +253,7 @@ thank.\ac{pst}.3\ac{pl}\scsub{[acc]} \ac{rp}.\ac{pl}.\ac{m}.\ac{acc} \ac{cl}.1\a
 
 This example is compatible with three patterns. First, Modern Greek could be a case competition language of the external-only type that only allows the external case to surface. I repeat Table \ref{tbl:case-competition-only-ext-repeated} from Section \ref{sec:pattern-iii} as Table \ref{tbl:greek-poss1}, and I mark the cell that corresponds to example \ref{ex:greek-acc-nom} in gray.
 
- \begin{table}[ht]
+ \begin{table}[H]
    \center
    \caption{Modern Greek headless relatives possibility 1}
    \begin{tabular}{c|c|c|c}
@@ -285,7 +285,7 @@ This example is compatible with three patterns. First, Modern Greek could be a c
 
 Second, Modern Greek could be a case competition language of the unrestricted type that allows the internal case and external case to surface. I repeat Table \ref{tbl:case-competition-int-ext-repeated} from Section \ref{sec:pattern-i} as Table \ref{tbl:greek-poss2}, and I mark the cell that corresponds to example \ref{ex:greek-acc-nom} in gray.
 
-  \begin{table}[ht]
+  \begin{table}[H]
     \center
     \caption{Modern Greek headless relatives possibility 2}
     \begin{tabular}{c|c|c|c}
@@ -317,7 +317,7 @@ Second, Modern Greek could be a case competition language of the unrestricted ty
 
 Third, Modern Greek could be a language without case competition of the always-external type that lets the relative pronoun appear in the external case. I repeat Table \ref{tbl:no-case-competition-ext} from the introduction of the chapter as Table \ref{tbl:greek-poss3}, and I mark the cell that corresponds to example \ref{ex:greek-acc-nom} in gray.
 
- \begin{table}[ht]
+ \begin{table}[H]
    \center
    \caption{Modern Greek headless relatives possibility 3}
    \begin{tabular}{c|c|c|c}
@@ -374,7 +374,7 @@ come.\ac{pst}.3\ac{pl}\scsub{[nom]} \ac{rp}.\ac{pl}.\ac{m}.\ac{acc} invite.\ac{p
 This example shows that Modern Greek is neither an instance of the pattern in Section \ref{sec:pattern-iii}, in which only the external case is allowed to surface, nor is it an instance of the pattern in Section \ref{sec:pattern-i}, in which the internal case and external case are allowed to surface.
 Instead, as illustrated by Table \ref{tbl:no-case-competition-greek}, the language does not have any case competition. The relative pronoun appears in the external case: the external case can be the most complex case, illustrated by the example in \ref{ex:greek-acc-nom}, marked here in light gray, or it can be the least complex case, illustrated by the example in \ref{ex:greek-nom-acc}, marked here in dark gray.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Summary of Modern Greek headless relatives}
   \begin{tabular}{c|c|c|c}
@@ -445,7 +445,7 @@ This section provides a typological overview of headless relatives. First, I des
 
 In Section \ref{sec:pattern-i} to \ref{sec:pattern-iv}, I discussed four different patterns. These four patterns are all based on a single table, shown in Table \ref{tbl:case-competition-int-ext-typology} (repeated from Section \ref{sec:pattern-i}).
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Relative pronoun follows case competition (repeated)}
   \begin{tabular}{c|c|c|c}
@@ -480,7 +480,7 @@ The variation between the four patterns lies in whether all cells in the table a
 
 In this chapter I introduced two different ways of filling out the table. The first one is the one in which the relative pronoun appears in the internal case, as in Table \ref{tbl:no-case-competition-int-typology}, repeated from Table \ref{tbl:no-case-competition-int}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Relative pronoun in internal case}
   \begin{tabular}{c|c|c|c}
@@ -512,7 +512,7 @@ In this chapter I introduced two different ways of filling out the table. The fi
 
 The second one is the one in which the relative pronoun appears in the external case, as in Table \ref{tbl:no-case-competition-ext-typology} (repeated from Table \ref{tbl:no-case-competition-ext}).
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Relative pronoun in external case}
   \begin{tabular}{c|c|c|c}
@@ -545,7 +545,7 @@ The second one is the one in which the relative pronoun appears in the external 
 I showed in section \ref{sec:always-ext} that only the always-external pattern is attested.
 I incorporate the parameter that models this pattern into the diagram from Section \ref{sec:summary-3-patterns} in Figure \ref{fig:typology}.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}[b]{c}
@@ -598,7 +598,7 @@ In this dissertation I do not offer an explanation for why this type of example 
 
 In Table \ref{tbl:possible-headless-relatives}, I give all logically possible patterns for headless relatives.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Logically possible patterns for headless relatives}
     \begin{tabular}{ccc|ccc}
