--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -62,7 +62,7 @@ The relative pronoun \tit{þaim)} `\ac{rp}.\ac{sg}.\ac{m}.\ac{dat}' appears in t
 These findings are summarized as in Table \ref{tbl:summary-gothic-matching}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:gothic-nom-nom}, in which the internal nominative case competes against the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:gothic-acc-acc-rep}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case.
 The unmarked dative corresponds to \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
 
-\begin{table}[ht]
+\begin{table}[H]
  \center
  \caption{Gothic headless relatives (matching)}
  \begin{tabular}{c|c|c|c}
@@ -122,7 +122,7 @@ Throughout this dissertation * stands for 'not found in natural language'. For e
 
 The light gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the internal accusative wins the case competition over the external nominative and the relative pronoun surfaces in the accusative case. The dark gray marking corresponds to \ref{ex:gothic-acc-nom-rep}, in which the external accusative wins the case competition over the internal nominative and the relative pronoun surfaces in the accusative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples in which the nominative and the accusative compete and the relative pronoun appears in the nominative case.
 
-\begin{table}[ht]
+\begin{table}[H]
  \center
  \caption{Gothic headless relatives (\ac{nom} --- \ac{acc})}
  \begin{tabular}{c|c|c|c}
@@ -176,7 +176,7 @@ Examples in which the internal case is nominative, the external case is dative a
 
 The two examples in which the nominative and the dative compete are shown in Table \ref{tbl:summary-gothic-nom-dat}. The light gray marking corresponds to \ref{ex:gothic-nom-dat}, in which the internal dative wins the case competition over the external nominative and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-nom}, in which the external dative wins the case competition over the internal nominative and the relative pronoun surfaces in the dative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples in which the nominative and the dative compete and the relative pronoun appears in the nominative case.
 
- \begin{table}[ht]
+ \begin{table}[H]
   \center
   \caption{Gothic headless relatives (\ac{nom} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -210,12 +210,12 @@ I end with the competition between the dative and the accusative. Following the 
 
 Consider the example in \ref{ex:gothic-acc-dat}, in which the internal dative case competes against the external accusative case.
 The internal case is dative, as the preposition \tit{ana} `on' takes dative complements.\footnote{
+\tit{Ana} `on' takes dative complements when the PP is interpreted as locational. \tit{Ana} `on' takes accusative complements when the PP is interpreted as directional. \tit{Ana þammei} `on that' in \ref{ex:gothic-acc-dat} refers to a location.
+}\footnote{
 The example in \ref{ex:gothic-acc-dat} differs from the other examples of headless relatives. In this example, it is a preposition that assigns a particular case to the relative pronoun. So far, I have only given examples in which it is a verbal predicate that assigns a case to the relative pronoun (or the absent head). The reason for that is to keep the data set as homogenous as possible. \citet{harbert1978} reports there is no such example with the dative as internal case and the accusative as external case. My own research reaches the same conclusion. The absence of a headless relative with an internal dative case and an external accusative case (both assigned by verbal predicates) is not surprising, mainly for two reasons. First, the headless relative construction is infrequent to begin with. \citeauthor{harbert1978} reports of some case competition combinations only a single or a few occurrences.
 Second, Gothic only has a few verbs that take dative complements.
 
 There is reason to believe that this missing occurrence is due to the above mentioned reasons rather than a meaningful gap in the paradigm. Datives often appear after prepositions. There are instances in which the internal dative case is assigned by a preposition and the external accusative case is assigned by a verbal predicate. In each of these instances, the relative pronoun surfaces in the internal dative case and not in the external accusative case (as in \ref{ex:gothic-acc-dat}). For the other way around holds the same: with an accusative internal case assigned by a verbal predicate and a dative external predicate assigned by a preposition, the relative pronoun surfaces in the dative and not in the accusative. Therefore, the system that I set up later in this dissertation is able to generate the dative as internal case and accusative as external case which are both assigned by verbal predicates.
-}\footnote{
-\tit{Ana} `on' takes dative complements when the PP is interpreted as locational. \tit{Ana} `on' takes accusative complements when the PP is interpreted as directional. \tit{Ana þammei} `on that' in \ref{ex:gothic-acc-dat} refers to a location.
 }
 The external case is accusative, as the predicate \tit{ushafjan} `pick up' takes accusative objects.
 The relative pronoun \tit{þamm(a)} `\ac{rp}.\ac{sg}.\ac{n}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
@@ -237,7 +237,7 @@ that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rp}.\ac{sg}.\ac{m}.\ac
 
 The two examples in which the accusative and the dative compete are shown in Table \ref{tbl:summary-gothic-acc-dat}. The light gray marking corresponds to \ref{ex:gothic-acc-dat}, in which the internal dative wins the case competition over the external accusative and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-acc}, in which the external dative wins the case competition over the internal accusative and the relative pronoun surfaces in the dative case. The instances of *\ac{acc} that appear in the same cells indicate that there are no examples in which the accusative and the dative compete and the relative pronoun appears in the accusative case.
 
- \begin{table}[ht]
+ \begin{table}[H]
   \center
   \caption{Gothic headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -269,7 +269,7 @@ The two examples in which the accusative and the dative compete are shown in Tab
 
 Table \ref{tbl:summary-gothic-simple} is a simplified version of Table \ref{tbl:summary-gothic-acc-dat}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption{Summary of Gothic headless relatives}
     \input{tables/gothic-summary.tex}
@@ -309,7 +309,7 @@ There is one pattern that is not attested crosslinguistically. This pattern does
 
 Table \ref{tbl:syncretisms} shows examples for each of these possible patterns.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Syncretism patterns in Germanic pronouns}
     \input{tables/syncretism-nom-acc-dat.tex}
@@ -331,7 +331,7 @@ This section shows a second way in which \ac{nom} < \ac{acc} < \ac{dat} is refle
 
 Khanty (or Ostyak) shows morphological case containment in some of its pronouns (\pgcitealt{nikolaeva1999}{16} after \citealt{smith2019}). Three examples are given in Table \ref{tbl:cont-khanty}.
 
-\begin{table}[ht]
+\begin{table}[H]
   \center
   \caption {Morphological case containment in Khanty}
   \begin{tabular}{clll}
@@ -394,7 +394,7 @@ It differs per language with how many of its arguments a predicate agrees. Howev
 }
 The hierarchy is schematically represented in Figure \ref{fig:agr-sub-do-io}. It should be read as follows: if a language allows the predicate to agree with the argument in a particular circle, it also allows the predicate to agree with the argument in the circle around it.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
@@ -443,7 +443,7 @@ Basque is an example of a language that shows agreement with the subject, the di
 
 Putting the languages in \posscitet{moravcsik1978} schema gives the result as shown in Figure \ref{fig:agr-sub-do-io-lang}.
 
- \begin{figure}[ht]
+ \begin{figure}[H]
    \centering
    \begin{tabular}[b]{c}
      \toprule
@@ -469,7 +469,7 @@ Putting the languages in \posscitet{moravcsik1978} schema gives the result as sh
 
 \citet{gilligan1987} performed a typological study among 100 genetically and areally diverse languages, which confirms the picture. The results are shown in Table \ref{tbl:agr-typo}. There are 23 languages that do not show any agreement, like Japanese. There are 31 languages that show agreement only with the subject and not with the direct and indirect object, like German. There are 25 languages that show agreement with the subject and direct object but not with the indirect object, like Hungarian. There are 23 languages that show agreement with the subject, the direct object and the indirect object, like Basque.
 
- \begin{table}[ht]
+ \begin{table}[H]
    \center
    \caption {Typology for agreement hierarchy}
      \begin{tabular}[t]{ccccc}
@@ -510,7 +510,7 @@ In {the winter} were.\ac{pl} {the king}.\ac{sg}.\ac{dat} given slave.\ac{pl}.\ac
 
 The second type of evidence that \citeauthor{bobaljik2006} gives comes from ergative-absolutive languages. Ergative-absolutive languages differ in their alignment from nominative-accusative languages. In nominative-accusative languages, the subject of an intransitive verb (S) has the same marking as the subject of a transitive verb (A), namely nominative. The object of a transitive verb (O) has its own marking, namely accusative. This is schematically shown in \ref{fig:nom-acc-lang}.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
@@ -529,7 +529,7 @@ The second type of evidence that \citeauthor{bobaljik2006} gives comes from erga
 
 In ergative-absolutive languages, the alignment is different. The subject of an intransitive verb (S) has the same marking as the object of the transitive verb (O), namely absolutive. The subject of the transitive verb (A) has its own marking, namely ergative. This is schematically shown in \ref{fig:erg-abs-lang}.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
@@ -552,7 +552,7 @@ Note here that nominative-accusative languages use the same case marking for the
 
 \citeauthor{bobaljik2006} (following \citealt{marantz2000}) combines nominative-accusative and ergative-absolutive languages in the following way: accusative and ergative are dependent cases, and nominative or absolutive are unmarked case. Reformulating Figure \ref{fig:agr-sub-do-io-lang} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-def-dep-dat}.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
@@ -584,7 +584,7 @@ Last, Basque is a language that shows agreement with the unmarked, the dependent
 
 In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:agr-nom-acc-dat} suffices.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
@@ -625,7 +625,7 @@ In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It 
 }
 The implicational hierarchy is schematically represented in Figure \ref{fig:rel-sub-do-io}. It should be read as follows: if a language allows a particular relativization strategy of the grammatical function in a particular circle, it also allows this relativization strategy of the grammatical function of the circle around it.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
@@ -750,7 +750,7 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
 
 Putting the languages in the schema gives the result as shown in Figure \ref{fig:rel-sub-do-io-lang}.
 
- \begin{figure}[ht]
+ \begin{figure}[H]
    \centering
    \begin{tabular}[b]{c}
      \toprule
@@ -803,7 +803,7 @@ Ergatives (for instance the ergative subject \tit{ŋad̦a} `I' in \ref{ex:dyirba
 
 In conclusion, just as the agreement hierarchy, the relativization hierarchy is formalized best in terms of morphological case \citep[cf.][]{caha2009}. Reformulating Figure \ref{fig:rel-sub-do-io-lang} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:rel-def-dep-dat}.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
@@ -833,7 +833,7 @@ Last, Basque is a language that has a particular relativization strategy for unm
 
 In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:rel-nom-acc-dat} suffices.
 
-\begin{figure}[ht]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
