--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -4,7 +4,7 @@
 
 In Chapter \ref{ch:typology}, I introduced two descriptive parameters that describe the differences between the attested languages. I repeat the overview in Figure \ref{fig:two-parameters}.
 
-\begin{figure}[htbp]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
@@ -363,7 +363,7 @@ I suggest that the light head and the relative pronoun in this type of language 
       \end{forest}
       & \phantom{x} &
     \begin{forest} boom
-      [\tsc{rel}P, s sep=15mm
+      [\tsc{rel}P, s sep=17.5mm
           [\tsc{rel}P,
           tikz={
           \node[draw,circle,
@@ -1181,12 +1181,12 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
         tikz={
         \node[label=below:\tit{s},
         draw,circle,
-        scale=0.9,
+        scale=0.85,
         fit to=tree]{};
         \node[draw,circle,
         dotted,very thick,
         fill=DG,fill opacity=0.2,
-        scale=0.95,
+        scale=0.9,
         fit to=tree]{};
         }
             [\tsc{k}2]
@@ -1208,11 +1208,11 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
             tikz={
             \node[draw,circle,
             dotted,very thick,
-            scale=0.9,
+            scale=0.85,
             fit to=tree]{};
             \node[label=below:\tit{s},
             draw,circle,
-            scale=0.85,
+            scale=0.8,
             fit to=tree]{};
             }
                 [\tsc{k}1]
@@ -1619,7 +1619,7 @@ For this type of language I need to make an assumption explicit that concerns th
 At a later stage in the derivation, the light head is built. The last features of the light head that are merged are the case features. Remember that in Nanosyntax, features are merged step by step, and spellout takes place after each instance of merge. This means that there is a stage in the derivation in which the light head bears the nominative case (as in Figure \ref{fig:nom-nom-unres}). At that point, the relative pronoun is deleted. The light head remains as the surface element.\footnote{
 Thanks to Pavel Caha for suggesting this possibility.
 }
-Subsequently the feature \tsc{k}2 is merged to the light head to make it a \tsc{acc}P.
+Subsequently the feature \tsc{k}2 is merged to the light head to make it an \tsc{acc}P.
 
 This type of derivation is not possible in the situation in which the internal case is more complex than the external case. In that situation, there is no stage in the derivation in which the case of the relative pronoun and the case of the light head match. The relative pronoun is built before the light head, and even at the end of the derivation the light head does not have the more complex case that the relative pronoun has.
 In Chapter \ref{ch:deriving-unrestricted} I discuss these derivations in more detail.
@@ -1713,7 +1713,7 @@ In other words, the grammaticality of a headless relative depends on containment
 
 The source of variation between languages is the different lexical entries that languages have. The parameters introduced in Chapter \ref{ch:typology} and repeated in the introduction of the chapter can be reformulated as in Figure \ref{fig:lexical-entries}.
 
-\begin{figure}[htbp]
+\begin{figure}[H]
   \centering
   \begin{tabular}[b]{c}
     \toprule
