--- a/thesis.tex
+++ b/thesis.tex
@@ -1,23 +1,22 @@
 \documentclass[hidelinks,a4paper,twoside,openright,11pt]{memoir}
 
-% \includeonly{introduction}
-%
-% \setulmarginsandblock{3.3cm}{4cm}{*}
-% \setlrmarginsandblock{3cm}{3cm}{*}
+% \includeonly{deriving-unrestricted}
 
 \setlrmarginsandblock{3.5cm}{3.5cm}{*}
 \setulmarginsandblock{3.5cm}{*}{1}
 \checkandfixthelayout
 
-%%% set up the recto page layout
-% \checkandfixthelayout% or perhaps \checkandfixthelayout[lines]
-% \setlength{\evensidemargin}{\oddsidemargin}% after \checkandfix...
-%
-
-
 \usepackage{fenna-files/packages}
 \addbibresource{fenna-files/references.bib}
 \usepackage{fenna-files/abbreviations}
+
+\makeatletter
+\renewcommand{\@makeschapterhead}[1]{%
+  {\noindent\raggedright\normalfont% Alignment and font reset
+   \Huge\bfseries #1\par\nobreak}% Formatting
+  \vspace{\baselineskip}% ...just a little space
+}
+\makeatother
 
 \begin{document}
 
@@ -34,8 +33,8 @@
 
 \vspace{6em}
 
-{\Huge
-Case competition in headless relatives}\\
+{\huge
+\tbf{Case competition in headless relatives}}\\
 
 \vspace{5em}
 
@@ -58,18 +57,23 @@ Boarnsterhim, Niederlande\\
 
 \end{titlingpage}
 
-\clearpage
-
 \include{acknowledgements}
-
 \clearpage
+
+\phantom{x}
+\vspace{-7em}
 \tableofcontents
-
 \clearpage
+
+\phantom{x}
+\vspace{-7em}
 \listoftables
-
 \clearpage
+
+\phantom{x}
+\vspace{-7em}
 \listoffigures
+\clearpage
 
 \chapter*[List of abbreviations]{List of abbreviations}
 \begingroup
@@ -77,7 +81,7 @@ Boarnsterhim, Niederlande\\
 \printacronyms[include=abbr, heading=none]
 \endgroup
 \addcontentsline{toc}{chapter}{List of abbreviations}
-
+\clearpage
 
 %%%%
 \mainmatter
